If applied, this commit will have fixed the  issues related to the readability of contact and about pages

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -5,7 +5,6 @@
 * Browsers: last 2 version
 */
 
-
 :root {
   --background-color:#2d5f89;
   --primary-color: black;
@@ -415,6 +414,7 @@ margin-bottom: 10px;
 }
 
 .right-side .message-box {
+  padding-bottom: 30px;
   height: 200px;
   margin-top: 6px;
 }
