--- a/css/styles.css
+++ b/css/styles.css
@@ -358,6 +358,7 @@ margin-bottom: 10px;
 }
 
 .right-side .message-box {
+  padding-bottom: 30px;
   height: 200px;
   margin-top: 6px;
 }
